--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ scroll-behavior: smooth;
 }
 </style>
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- Replace the existing Google Fonts link -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Sora:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
 <style>
 :where([class^="ri-"])::before { content: "\f3c2"; }
@@ -42,7 +43,7 @@ DEFAULT: '8px',
 }
 </script>
 </head>
-<body class="bg-white font-['Inter']">
+<body class="bg-white font-['Work_Sans']">
 <script>
 document.addEventListener('DOMContentLoaded', function() {
 const navLinks = document.querySelectorAll('nav a[href^="#"]');
@@ -87,16 +88,12 @@ Download App
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative">
 <div class="grid md:grid-cols-2 gap-12 items-center">
 <div>
-<h1 class="text-5xl font-bold leading-tight mb-6">Take Control of Your Night Routine</h1>
-<p class="text-xl text-gray-600 mb-8">Designed specifically for ADHD minds, NightFlow helps you build and maintain a consistent bedtime routine that works for you.</p>
+<h1 class="text-5xl font-bold leading-tight mb-6 font-['Poppins']">Turn bedtime into a soothing ritual - with Moona</h1>
+<p class="text-xl text-gray-600 mb-8">Moonu helps turn bedtime chaos into calm with gentle reminders, soothing interactions, and a rewarding routine.</p>
 <div class="flex space-x-4">
 <button class="bg-primary text-white px-8 py-4 !rounded-button hover:bg-primary/90 flex items-center">
 <i class="ri-apple-fill ri-lg mr-2"></i>
 App Store
-</button>
-<button class="bg-secondary text-white px-8 py-4 !rounded-button hover:bg-secondary/90 flex items-center">
-<i class="ri-google-play-fill ri-lg mr-2"></i>
-Play Store
 </button>
 </div>
 </div>
@@ -108,7 +105,7 @@ Play Store
 </section>
 <section id="features" class="py-20 bg-gray-50">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<h2 class="text-4xl font-bold text-center mb-16">Features Designed for Your Success</h2>
+<h2 class="text-4xl font-semibold text-center mb-16 font-['Poppins']">Features Designed for Your Success</h2>
 <div class="grid md:grid-cols-3 gap-8">
 <div class="bg-white p-8 rounded-2xl shadow-lg">
 <div class="w-16 h-16 bg-primary/10 rounded-xl flex items-center justify-center mb-6">
@@ -139,29 +136,29 @@ Play Store
 </section>
 <section id="how-it-works" class="py-20">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<h2 class="text-4xl font-bold text-center mb-16">How It Works</h2>
+<h2 class="text-4xl font-semibold text-center mb-16 font-['Poppins']">How It Works</h2>
 <div class="grid md:grid-cols-4 gap-8">
 <div class="text-center">
 <div class="w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center mx-auto mb-6">1</div>
-<h3 class="text-xl font-semibold mb-4">Set Your Goals</h3>
+<h3 class="text-lg font-semibold mb-4">Set Your Goals</h3>
 <p class="text-gray-600">Choose your ideal bedtime and morning wake-up time.</p>
 <img src="assets/images/features/goal-setting.jpg" alt="Goal Setting" class="rounded-xl shadow-lg mt-6">
 </div>
 <div class="text-center">
 <div class="w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center mx-auto mb-6">2</div>
-<h3 class="text-xl font-semibold mb-4">Build Your Routine</h3>
+<h3 class="text-lg font-semibold mb-4">Build Your Routine</h3>
 <p class="text-gray-600">Create a personalized routine with activities you enjoy.</p>
 <img src="assets/images/features/routine-building.jpg" alt="Routine Building" class="rounded-xl shadow-lg mt-6">
 </div>
 <div class="text-center">
 <div class="w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center mx-auto mb-6">3</div>
-<h3 class="text-xl font-semibold mb-4">Get Reminders</h3>
+<h3 class="text-lg font-semibold mb-4">Get Reminders</h3>
 <p class="text-gray-600">Receive gentle notifications to keep you on track.</p>
 <img src="assets/images/features/reminders.jpg" alt="Reminders" class="rounded-xl shadow-lg mt-6">
 </div>
 <div class="text-center">
 <div class="w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center mx-auto mb-6">4</div>
-<h3 class="text-xl font-semibold mb-4">Track Progress</h3>
+<h3 class="text-lg font-semibold mb-4">Track Progress</h3>
 <p class="text-gray-600">Monitor your success and adjust as needed.</p>
 <img src="assets/images/features/progress.jpg" alt="Progress" class="rounded-xl shadow-lg mt-6">
 </div>
@@ -170,7 +167,7 @@ Play Store
 </section>
 <section id="benefits" class="py-20 bg-gray-50">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<h2 class="text-4xl font-bold text-center mb-16">Real Results for ADHD Minds</h2>
+<h2 class="text-4xl font-semibold text-center mb-16 font-['Poppins']">Real Results for ADHD Minds</h2>
 <div class="grid md:grid-cols-2 gap-12 items-center">
 <div>
 <div class="mb-8">
@@ -203,15 +200,6 @@ Play Store
 <div class="space-y-6">
 <div>
 <div class="flex justify-between mb-2">
-<span class="font-medium">Better Sleep Quality</span>
-<span class="text-primary">87%</span>
-</div>
-<div class="h-2 bg-gray-200 rounded-full">
-<div class="h-2 bg-primary rounded-full" style="width: 87%"></div>
-</div>
-</div>
-<div>
-<div class="flex justify-between mb-2">
 <span class="font-medium">Routine Consistency</span>
 <span class="text-primary">92%</span>
 </div>
@@ -234,17 +222,12 @@ Play Store
 </section>
 <section class="py-20">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-<h2 class="text-4xl font-bold mb-8">Start Your Better Sleep Journey Today</h2>
+<h2 class="text-4xl font-semibold mb-8 font-['Poppins']">Start Your Better Sleep Journey Today</h2>
 <p class="text-xl text-gray-600 mb-12">Download Moonu now and get 14 days free trial</p>
 <div class="flex justify-center space-x-4">
 <button class="bg-primary text-white px-8 py-4 !rounded-button hover:bg-primary/90 flex items-center">
 <i class="ri-apple-fill ri-lg mr-2"></i>
 Download on App Store
-</button>
-<button class="bg-secondary text-white px-8 py-4 !rounded-button hover:bg-secondary/90 flex items-center">
-<i class="ri-google-play-fill ri-lg mr-2"></i>
-Get it on Play Store
-</button>
 </div>
 </div>
 </section>
@@ -252,7 +235,7 @@ Get it on Play Store
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="grid md:grid-cols-2 gap-12 items-center">
 <div>
-<h2 class="text-4xl font-bold mb-8">About Moonu</h2>
+<h2 class="text-4xl font-bold mb-8 font-['Poppins']">About Moonu</h2>
 <p class="text-gray-600 text-lg mb-6">Founded in 2024, MoonMate emerged from a personal journey of understanding the unique challenges that individuals with ADHD face in maintaining consistent sleep routines. Our team of neurodiversity advocates, sleep specialists, and technology experts came together with a shared vision: to create a solution that truly understands and supports the ADHD mind.</p>
 <p class="text-gray-600 text-lg mb-6">We believe that everyone deserves quality sleep, and our mission is to make bedtime routines more accessible, enjoyable, and sustainable for the ADHD community. Through continuous research, user feedback, and innovative technology, we're committed to evolving our platform to better serve our users' needs.</p>
 <div class="grid grid-cols-3 gap-8 mt-12">
@@ -285,10 +268,11 @@ Get it on Play Store
 </div>
 </div>
 </div>
+</div>
 </section>
 <footer class="bg-gray-50 py-12">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="grid md:grid-cols-4 gap-8">
+<div class="grid md:grid-cols-3 gap-8">
 <div>
 <div class="flex items-center mb-4">
 <img src="assets/images/logo/logo.png" class="w-8 h-8 mr-2" alt="Moonu Logo">
@@ -299,36 +283,16 @@ Get it on Play Store
 <div>
 <h4 class="font-semibold mb-4">Company</h4>
 <ul class="space-y-2 text-gray-600">
-<li><a href="#" class="hover:text-primary">About Us</a></li>
-<li><a href="#" class="hover:text-primary">Careers</a></li>
-<li><a href="#" class="hover:text-primary">Press</a></li>
+<li><a href="about.html" class="hover:text-primary">About Us</a></li>
 </ul>
 </div>
 <div>
 <h4 class="font-semibold mb-4">Legal</h4>
 <ul class="space-y-2 text-gray-600">
-<li><a href="#" class="hover:text-primary">Privacy Policy</a></li>
-<li><a href="#" class="hover:text-primary">Terms of Service</a></li>
-<li><a href="#" class="hover:text-primary">Cookie Policy</a></li>
+<li><a href="privacy.html" class="hover:text-primary">Privacy Policy</a></li>
+<li><a href="terms.html" class="hover:text-primary">Terms of Service</a></li>
 </ul>
 </div>
-<div>
-<h4 class="font-semibold mb-4">Connect</h4>
-<div class="flex space-x-4">
-<a href="#" class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center hover:bg-primary hover:text-white">
-<i class="ri-twitter-fill"></i>
-</a>
-<a href="#" class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center hover:bg-primary hover:text-white">
-<i class="ri-instagram-fill"></i>
-</a>
-<a href="#" class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center hover:bg-primary hover:text-white">
-<i class="ri-facebook-fill"></i>
-</a>
-</div>
-</div>
-</div>
-<div class="border-t mt-12 pt-8 text-center text-gray-600">
-<p>&copy; 2025 Moonu. All rights reserved.</p>
 </div>
 </div>
 </footer>
