feat:update website layout and content

--- a/about.html
+++ b/about.html
@@ -68,17 +68,16 @@ Download App
 </nav>
 
 <!-- Hero Section -->
-<section class="pt-32 pb-20">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<h1 class="text-5xl font-bold mb-8 font-['Poppins'] text-center">Our Story</h1>
-<div class="max-w-3xl mx-auto text-center mb-16">
-<p class="text-xl text-gray-600">Building a better night's sleep for the ADHD community, one routine at a time.</p>
-</div>
+<section class="pt-32 pb-16">
+<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+<p class="text-sm text-primary mb-4 uppercase tracking-wider">Our Story</p>
+<h1 class="text-5xl font-bold mb-6 font-['Poppins']">Helping ADHD minds find<br>peace at night</h1>
+<p class="text-xl text-gray-600">We're on a mission to transform bedtime routines for people with ADHD, creating structure where it's needed most.</p>
 </div>
 </section>
 
 <!-- Mission Section -->
-<section class="py-20 bg-gray-50">
+<section class="py-20">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="grid md:grid-cols-2 gap-12 items-center">
 <div>
@@ -86,17 +85,22 @@ Download App
 <p class="text-gray-600 text-lg mb-6">At Moonu, we believe that everyone deserves a peaceful night's sleep. Our mission is to empower individuals with ADHD to create and maintain healthy sleep routines that work for their unique needs.</p>
 <p class="text-gray-600 text-lg">Through innovative technology and deep understanding of neurodiversity, we're building tools that adapt to you, not the other way around.</p>
 </div>
-<div class="relative">
-<img src="assets/images/team/mission.jpg" alt="Our Mission" class="rounded-2xl shadow-xl">
+<div class="relative flex justify-center items-center">
+<div class="w-64 h-64 relative">
+<img src="assets/images/mascot/moonu-character.png" alt="Moonu Character" class="w-full h-full object-contain">
+<div class="absolute -bottom-4 left-1/2 transform -translate-x-1/2 w-32 h-8 bg-black/5 rounded-full blur-lg"></div>
+</div>
 </div>
 </div>
 </div>
 </section>
 
-<!-- Values Section (removed Team Section and placed Values Section directly after Mission) -->
-<section class="py-20 bg-white">
+
+<!-- Values Section -->
+<section class="py-32  bg-gray-50">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<h2 class="text-4xl font-semibold mb-16 font-['Poppins'] text-center">Our Values</h2>
+<h2 class="text-3xl font-semibold mb-4 font-['Poppins'] text-center">Values That Guide Us</h2>
+<p class="text-gray-600 text-center mb-16">These core principles inform everything we do, from design decisions to user interactions.</p>
 <div class="grid md:grid-cols-4 gap-8">
 <div class="text-center">
 <div class="w-16 h-16 bg-primary/10 rounded-xl flex items-center justify-center mb-6 mx-auto">
@@ -130,36 +134,54 @@ Download App
 </div>
 </section>
 
-<!-- Footer -->
+
+
+<!-- CTA Section -->
+<section class="py-32">
+<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+<h2 class="text-4xl font-semibold mb-8 font-['Poppins']">Ready to transform your night routine?</h2>
+<p class="text-xl text-gray-600 mb-12">Join thousands of people who are finding peace at bedtime with Moonu's personalized ADHD-friendly approach.</p>
+<div class="relative">
+<button class="bg-primary text-white px-8 py-4 !rounded-button hover:bg-primary/90 flex items-center mx-auto">
+<i class="ri-apple-fill ri-lg mr-2"></i>
+Download on App Store
+</button>
+<span class="block text-sm text-gray-500 mt-2">Coming Soon</span>
+</div>
+</div>
+</section>
+
 <footer class="bg-gray-50 py-12">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="grid md:grid-cols-3 gap-8">
-<div>
-<div class="flex items-center mb-4">
-<img src="assets/images/logo/logo.png" class="w-8 h-8 mr-2" alt="Moonu Logo">
-<div class="font-['Sora'] text-2xl font-semibold text-primary">Moonu</div>
-</div>
-<p class="text-gray-600">Your ADHD-friendly night routine companion.</p>
-</div>
-<div>
-<h4 class="font-semibold mb-4">Company</h4>
-<ul class="space-y-2 text-gray-600">
-<li><a href="about.html" class="hover:text-primary">About Us</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-semibold mb-4">Legal</h4>
-<ul class="space-y-2 text-gray-600">
-<li><a href="privacy.html" class="hover:text-primary">Privacy Policy</a></li>
-<li><a href="terms.html" class="hover:text-primary">Terms of Service</a></li>
-</ul>
-</div>
-</div>
-<div class="border-t mt-12 pt-8 text-center text-gray-600">
-<p>&copy; 2025 Moonu. All rights reserved.</p>
-</div>
-</div>
-</footer>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="grid md:grid-cols-2 gap-8">
+        <div>
+        <div class="flex items-center mb-4">
+        <img src="assets/images/logo/logo.png" class="w-8 h-8 mr-2" alt="Moonu Logo">
+        <div class="font-['Sora'] text-2xl font-semibold text-primary">Moonu</div>
+        </div>
+        <p class="text-gray-600">Your ADHD-friendly night routine companion.</p>
+        </div>
+        <div class="grid grid-cols-2 gap-8">
+        <div>
+        <h4 class="font-semibold mb-4">Company</h4>
+        <ul class="space-y-2 text-gray-600">
+        <li><a href="about.html" class="hover:text-primary">About Us</a></li>
+        <li><a href="routine-tips.html" class="hover:text-primary">Routine Tips</a></li>
+        </ul>
+        </div>
+        <div>
+        <h4 class="font-semibold mb-4">Legal</h4>
+        <ul class="space-y-2 text-gray-600">
+        <li><a href="privacy.html" class="hover:text-primary">Privacy Policy</a></li>
+        <li><a href="terms.html" class="hover:text-primary">Terms of Service</a></li>
+        </ul>
+        </div>
+        </div>
+        <div class="border-t mt-12 pt-8 text-center text-gray-600 col-span-full">
+        <p>&copy; 2025 Moonu. All rights reserved.</p>
+        </div>
+        </div>
+        </footer>
 
 </body>
 </html>
