--- a/terms.html
+++ b/terms.html
@@ -66,16 +66,13 @@ Download App
 
 <!-- Header -->
 <section class="pt-32 pb-12">
-<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <h1 class="text-4xl font-bold mb-8 font-['Poppins'] text-center">Terms of Service</h1>
-<p class="text-gray-600 mb-4">Last updated: March 15, 2024</p>
-</div>
-</section>
 
-<!-- Content -->
-<section class="py-4">
-<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="space-y-12">
+<div class="space-y-12 max-w-3xl mx-auto">
+
+<p class="text-gray-600 mb-4">Last updated: March 15, 2024</p>
+
 
 <div>
 <h2 class="text-2xl font-semibold mb-4 font-['Poppins']">1. Acceptance of Terms</h2>
@@ -140,37 +137,41 @@ Download App
 </div>
 </section>
 
-<!-- Footer -->
-<!-- ... existing code ... -->
+
+<!-- Increased spacing before footer -->
+<div class="h-20"></div>
+
 <footer class="bg-gray-50 py-12">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="grid md:grid-cols-3 gap-8">
-    <div>
-    <div class="flex items-center mb-4">
-    <img src="assets/images/logo/logo.png" class="w-8 h-8 mr-2" alt="Moonu Logo">
-    <div class="font-['Sora'] text-2xl font-semibold text-primary">Moonu</div>
-    </div>
-    <p class="text-gray-600">Your ADHD-friendly night routine companion.</p>
-    </div>
-    <div>
-    <h4 class="font-semibold mb-4">Company</h4>
-    <ul class="space-y-2 text-gray-600">
-    <li><a href="about.html" class="hover:text-primary">About Us</a></li>
-    </ul>
-    </div>
-    <div>
-    <h4 class="font-semibold mb-4">Legal</h4>
-    <ul class="space-y-2 text-gray-600">
-    <li><a href="privacy.html" class="hover:text-primary">Privacy Policy</a></li>
-    <li><a href="terms.html" class="hover:text-primary">Terms of Service</a></li>
-    </ul>
-    </div>
-    </div>
-    <div class="border-t mt-12 pt-8 text-center text-gray-600">
-    <p>&copy; 2025 Moonu. All rights reserved.</p>
-    </div>
-    </div>
-</footer>
+    <div class="grid md:grid-cols-2 gap-8">
+        <div>
+        <div class="flex items-center mb-4">
+        <img src="assets/images/logo/logo.png" class="w-8 h-8 mr-2" alt="Moonu Logo">
+        <div class="font-['Sora'] text-2xl font-semibold text-primary">Moonu</div>
+        </div>
+        <p class="text-gray-600">Your ADHD-friendly night routine companion.</p>
+        </div>
+        <div class="grid grid-cols-2 gap-8">
+        <div>
+        <h4 class="font-semibold mb-4">Company</h4>
+        <ul class="space-y-2 text-gray-600">
+        <li><a href="about.html" class="hover:text-primary">About Us</a></li>
+        <li><a href="routine-tips.html" class="hover:text-primary">Routine Tips</a></li>
+        </ul>
+        </div>
+        <div>
+        <h4 class="font-semibold mb-4">Legal</h4>
+        <ul class="space-y-2 text-gray-600">
+        <li><a href="privacy.html" class="hover:text-primary">Privacy Policy</a></li>
+        <li><a href="terms.html" class="hover:text-primary">Terms of Service</a></li>
+        </ul>
+        </div>
+        </div>
+        <div class="border-t mt-12 pt-8 text-center text-gray-600 col-span-full">
+        <p>&copy; 2025 Moonu. All rights reserved.</p>
+        </div>
+        </div>
+        </footer>
 
 </body>
 </html>
