--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Download App
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="grid md:grid-cols-2 gap-12 items-center">
 <div>
-<h1 class="text-5xl font-bold leading-tight mb-6 font-['Poppins']">Turn bedtime into a soothing ritual - with Moona</h1>
+<h1 class="text-5xl font-bold leading-tight mb-6 font-['Poppins']">Turn bedtime into a soothing ritual - with Moonu</h1>
 <p class="text-xl text-gray-600 mb-8">Moonu helps turn bedtime chaos into calm with gentle reminders, soothing interactions, and a rewarding routine.</p>
 <div class="flex space-x-4">
 <div class="relative">
