fix:add image to how it works

--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@ App Store
 </div>
 </div>
 </section>
+<!-- How It Works Section -->
 <section id="how-it-works" class="py-20">
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <h2 class="text-4xl font-bold text-center mb-16">How It Works</h2>
-<div class="space-y-32">
+<div class="space-y-48"> <!-- Increased spacing between steps -->
     <!-- Step 1 -->
-    <div class="grid md:grid-cols-2 gap-12 items-center">
+    <div class="grid md:grid-cols-2 gap-12 items-center min-h-[400px]"> <!-- Added min-height -->
         <div>
             <div class="relative mb-6">
                 <div class="w-20 h-20 bg-primary/10 rounded-2xl flex items-center justify-center">
@@ -189,20 +190,36 @@ App Store
                 <p>• Add personal touches with notes and music</p>
             </div>
         </div>
-        <div class="relative">
-            <img src="assets/images/features/sleep-goals-1.png" alt="Sleep Goals Interface" class="w-2/3 absolute top-0 right-0">
-            <img src="assets/images/features/sleep-goals-2.png" alt="Sleep Goals Settings" class="w-2/3 absolute top-20 left-0">
-            <img src="assets/images/features/sleep-goals-3.png" alt="Sleep Goals Progress" class="w-2/3 absolute top-40 right-0">
+        <div class="grid grid-cols-3 gap-4 relative h-[400px]"> <!-- Fixed height container -->
+            <div class="relative w-full max-w-[160px]"> <!-- Container with max-width -->
+                <img src="assets/images/features/sleep-goals-1.png" alt="Set Goals Interface" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
+            </div>
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/sleep-goals-2.png" alt="Set Goals Settings" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-20">
+            </div>
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/sleep-goals-3.png" alt="Set Goals Progress" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
+            </div>
         </div>
     </div>
 
     <!-- Step 2 -->
-    <div class="grid md:grid-cols-2 gap-12 items-center">
-        <div class="order-2 md:order-1">
-            <div class="relative grid grid-cols-3 gap-4">
-                <img src="assets/images/features/routine-1.png" alt="Routine Interface" class="rounded-xl shadow-lg">
-                <img src="assets/images/features/routine-2.png" alt="Routine Settings" class="rounded-xl shadow-lg translate-y-8">
-                <img src="assets/images/features/routine-3.png" alt="Routine Progress" class="rounded-xl shadow-lg">
+    <div class="grid md:grid-cols-2 gap-12 items-center min-h-[400px]">
+        <div class="order-2 md:order-1 grid grid-cols-3 gap-4 relative h-[400px]">
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/routine-1.png" alt="Routine Interface" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
+            </div>
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/routine-2.png" alt="Routine Settings" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-20">
+            </div>
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/routine-3.png" alt="Routine Progress" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
             </div>
         </div>
         <div class="order-1 md:order-2">
@@ -222,8 +239,8 @@ App Store
         </div>
     </div>
 
-    <!-- Step 3 -->
-    <div class="grid md:grid-cols-2 gap-12 items-center">
+    <!-- Step 3 - Same pattern as Step 1 -->
+    <div class="grid md:grid-cols-2 gap-12 items-center min-h-[400px]">
         <div>
             <div class="relative mb-6">
                 <div class="w-20 h-20 bg-primary/10 rounded-2xl flex items-center justify-center">
@@ -239,10 +256,16 @@ App Store
                 <p>• Generate tips on improving your routine by tracking </p>
             </div>
         </div>
-        <div class="relative">
-            <img src="assets/images/features/reminder-1.png" alt="Reminder Interface" class="w-2/3 absolute top-0 right-0">
-            <img src="assets/images/features/reminder-2.png" alt="Reminder Settings" class="w-2/3 absolute top-20 left-0">
-            <img src="assets/images/features/reminder-3.png" alt="Reminder Progress" class="w-2/3 absolute top-40 right-0">
+        <div class="grid grid-cols-3 gap-4 relative h-[400px]"> <!-- Fixed height container -->
+            <div class="relative w-full max-w-[160px]"> <!-- Container with max-width -->
+                <img src="assets/images/features/progress-1.png" alt="Set Goals Interface" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
+            </div>
+            <div class="relative w-full max-w-[160px]">
+                <img src="assets/images/features/progress-2.png" alt="Set Goals Settings" 
+                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-20">
+            </div>
+            
         </div>
     </div>
 </div>
