--- a/index.html
+++ b/index.html
@@ -83,24 +83,28 @@ Download App
 </div>
 </div>
 </nav>
-<section class="relative pt-32 pb-20">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<div class="grid md:grid-cols-2 gap-12 items-center">
-<div>
+<!-- Hero Section -->
+<section class="relative h-screen flex items-center bg-[#FDB813] overflow-hidden">
+<div class="absolute bottom-0 left-0 w-[400px] h-[400px] opacity-30">
+<img src="assets/images/hero/smile-face.png" alt="" class="w-full h-full object-contain">
+</div>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative w-full">
+<div class="grid grid-cols-5 gap-12 items-center">
+<div class="col-span-2">
 <h1 class="text-5xl font-bold leading-tight mb-6 font-['Poppins']">Turn bedtime into a soothing ritual - with Moonu</h1>
-<p class="text-xl text-gray-600 mb-8">Moonu helps turn bedtime chaos into calm with gentle reminders, soothing interactions, and a rewarding routine.</p>
+<p class="text-lg text-gray-700 mb-8">Moonu helps turn bedtime chaos into calm with gentle reminders, soothing interactions, and a rewarding routine.</p>
 <div class="flex space-x-4">
 <div class="relative">
 <button class="bg-primary text-white px-8 py-4 !rounded-button hover:bg-primary/90 flex items-center">
 <i class="ri-apple-fill ri-lg mr-2"></i>
 App Store
 </button>
-<span class="block text-sm text-gray-500 mt-2">Coming Soon</span>
+<span class="block text-sm text-white mt-2">Coming Soon</span>
 </div>
 </div>
 </div>
-<div class="relative flex justify-center">
-<img src="assets/images/features/app-interface.png" alt="App Interface" class="rounded-3xl w-3/4">
+<div class="relative flex justify-center col-span-3">
+<img src="assets/images/features/app-interface.png" alt="App Interface" class="w-[80%] h-auto mx-auto">
 </div>
 </div>
 </div>
@@ -183,11 +187,10 @@ App Store
                     </div>
                 </div>
             </div>
-            <h3 class="text-2xl font-semibold mb-4">Build Your Own Routine</h3>
+            <h3 class="text-2xl font-semibold mb-4">Skip the stress, start with a smart routine</h3>
             <div class="space-y-4 text-gray-600">
-                <p>• Choose from our library of ADHD-friendly activities</p>
-                <p>• Customize activity duration and order</p>
-                <p>• Add personal touches with notes and music</p>
+                
+                <p>• Start easy with our guided approach to create a draft routine and complete the setup in a few clicks.</p>
             </div>
         </div>
         <div class="grid grid-cols-3 gap-4 relative h-[400px]"> <!-- Fixed height container -->
@@ -208,19 +211,9 @@ App Store
 
     <!-- Step 2 -->
     <div class="grid md:grid-cols-2 gap-12 items-center min-h-[400px]">
-        <div class="order-2 md:order-1 grid grid-cols-3 gap-4 relative h-[400px]">
-            <div class="relative w-full max-w-[160px]">
-                <img src="assets/images/features/routine-1.png" alt="Routine Interface" 
-                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
-            </div>
-            <div class="relative w-full max-w-[160px]">
-                <img src="assets/images/features/routine-2.png" alt="Routine Settings" 
-                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-20">
-            </div>
-            <div class="relative w-full max-w-[160px]">
-                <img src="assets/images/features/routine-3.png" alt="Routine Progress" 
-                    class="rounded-xl shadow-lg w-full h-auto object-cover absolute top-0">
-            </div>
+        <div class="order-2 md:order-1 relative h-[400px] flex items-center justify-center">
+            <img src="assets/images/features/focus.png" alt="Focus Interface" 
+                class="rounded-xl shadow-lg w-full h-auto max-w-[320px] object-cover">
         </div>
         <div class="order-1 md:order-2">
             <div class="relative mb-6">
@@ -230,15 +223,12 @@ App Store
                     </div>
                 </div>
             </div>
-            <h3 class="text-2xl font-semibold mb-4">Get Smart Reminders</h3>
+            <h3 class="text-2xl font-semibold mb-4">Focus on the ongoing task with flexibility.</h3>
             <div class="space-y-4 text-gray-600">
-                <p>• Set up gentle, progressive notifications</p>
-                <p>• Choose from various reminder styles</p>
-                <p>• Customize reminder timing and frequency</p>
+                <p>• Start with one, then personalize bedtime routines for every kind of night.</p>
             </div>
         </div>
     </div>
-
     <!-- Step 3 - Same pattern as Step 1 -->
     <div class="grid md:grid-cols-2 gap-12 items-center min-h-[400px]">
         <div>
