style: adjust spacing under benefits section and standardize number containers

--- a/index.html
+++ b/index.html
@@ -301,56 +301,63 @@ behavior: 'smooth'
 
 
 <!-- Benefits Section -->
-<section id="benefits" class="py-20 bg-white">
-    
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="text-center">
-            <span class="inline-block bg-gray-100 text-gray-900 text-sm px-4 py-1 !rounded-sm mb-6">Benefits</span>
-            <h2 class="text-5xl font-bold mt-4 mb-4 font-['Poppins']">Our clients speak for us</h2>
-        </div>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mb-32">
+    <section id="benefits" class="py-20 bg-[#1224A1] rounded-[40px]">
+        <div class="px-4 sm:px-6 lg:px-8">
+            <div class="text-center">
+                <span class="inline-block bg-white/20 text-white text-sm px-4 py-1 !rounded-sm mb-6">Benefit</span>
+                <h2 class="text-5xl font-bold mt-4 mb-16 font-['Poppins'] text-white">The results speak for us</h2>
+            </div>
 
-        <div class="flex flex-col items-center max-w-4xl mx-auto">
-            <!-- Progress Bars -->
-            <div class="w-full max-w-2xl mt-10 mb-20">
-                <h3 class="text-xl font-semibold mb-6 text-center">Our Impact</h3>
-                <div class="space-y-6">
-                    <div>
-                        <div class="flex justify-between mb-2">
-                            <span class="font-medium">Routine Consistency</span>
-                            <span class="text-primary">82%</span>
-                        </div>
-                        <div class="h-2 bg-gray-100 rounded-full">
-                            <div class="h-2 bg-primary rounded-full" style="width: 82%"></div>
+            <div class="grid md:grid-cols-3 gap-8">
+                <!-- Stat 1 -->
+                <div class="text-center">
+                    <h3 class="text-6xl font-bold text-white mb-4">82%</h3>
+                    <p class="text-xl text-white mb-8">Routine<br>consistency</p>
+                    <div class="bg-[#2234B1] p-8 rounded-3xl">
+                        <p class="text-white/90 mb-8">I've always had a hard time getting to bed. I'd end up watching random videos or doom-scrolling until 2 a.m. This app kinda saved me. It walks me through a routine step by step, and somehow that makes it feel way less overwhelming.</p>
+                        <div class="flex items-center">
+                            <div class="w-10 h-10 bg-[#1A1A1A] rounded-full flex items-center justify-center text-white font-semibold mr-4">MH</div>
+                            <div class="text-left">
+                                <h4 class="text-white font-semibold">Maxin H.</h4>
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="flex justify-between mb-2">
-                            <span class="font-medium">Reduced Bedtime Anxiety</span>
-                            <span class="text-primary">78%</span>
+                </div>
+
+                <!-- Stat 2 -->
+                <div class="text-center">
+                    <h3 class="text-6xl font-bold text-white mb-4">78%</h3>
+                    <p class="text-xl text-white mb-8">Fewer skipped<br>routine</p>
+                    <div class="bg-[#2234B1] p-8 rounded-3xl">
+                        <p class="text-white/90 mb-8">I didn't expect it to help this much, honestly. I usually avoid anything that feels too rigid or productivity-focused, but this app is different. It's flexible, and it actually makes me feel more relaxed at night.</p>
+                        <div class="flex items-center">
+                            <div class="w-10 h-10 bg-[#FF6B00] rounded-full flex items-center justify-center text-white font-semibold mr-4">MW</div>
+                            <div class="text-left">
+                                <h4 class="text-white font-semibold">Mason C.</h4>
+                            </div>
                         </div>
-                        <div class="h-2 bg-gray-100 rounded-full">
-                            <div class="h-2 bg-primary rounded-full" style="width: 78%"></div>
+                    </div>
+                </div>
+
+                <!-- Stat 3 -->
+                <div class="text-center">
+                    <h3 class="text-6xl font-bold text-white mb-4">69%</h3>
+                    <p class="text-xl text-white mb-8">Reduced bedtime<br>anxiety</p>
+                    <div class="bg-[#2234B1] p-8 rounded-3xl">
+                        <p class="text-white/90 mb-8">What I love is that it doesn't judge me or push me too hard. It's just... there. A little nudge, some calming reminders from the cute little moon, and boom—I'm actually winding down. I never thought I'd say that.</p>
+                        <div class="flex items-center">
+                            <div class="w-10 h-10 bg-[#1A1A1A] rounded-full flex items-center justify-center text-white font-semibold mr-4">MW</div>
+                            <div class="text-left">
+                                <h4 class="text-white font-semibold">Olivia P.</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Testimonial -->
-            <div class="bg-white border-2 border-gray-100 p-12 rounded-3xl w-full mb-20">
-                <p class="text-xl text-gray-800 mb-8 text-center">Absolutely thrilled with the exceptional results! Thanks to their innovative approach and strong network of brand partners, our business experienced a remarkable surge in leads and growth. Highly recommend their services which we using always with our partners or company.</p>
-                <!-- <div class="flex items-center justify-center">
-                    <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
-                        <img src="assets/images/testimonials/john.jpg" alt="John" class="w-full h-full object-cover">
-                    </div>
-                    <div>
-                        <h4 class="text-lg font-semibold">John Doe</h4>
-                        <p class="text-gray-600">CEO</p>
-                    </div>
-                </div>
-            </div> -->
         </div>
-    </div>
-</section>
+    </section>
+</div>
 <!-- <section class="py-20 ">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
     <h2 class="text-4xl font-semibold mb-8 font-['Poppins']">Start Your Better Sleep Journey Today</h2>
