feat: update navigation order and section links

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ behavior: 'smooth'
 <div class="font-['Sora'] text-2xl font-semibold text-primary">Moonu</div>
 </div>
 <div class="hidden md:flex items-center space-x-8">
-<a href="#features" class="text-gray-600 hover:text-primary">Features</a>
 <a href="#how-it-works" class="text-gray-600 hover:text-primary">How It Works</a>
+<a href="#features" class="text-gray-600 hover:text-primary">Features</a>
 <a href="#benefits" class="text-gray-600 hover:text-primary">Benefits</a>
 </div>
 </div>
@@ -176,7 +176,7 @@ behavior: 'smooth'
 </div>
 
 <!-- How to Use Section -->
-<div class="py-32 mb-16">
+<div class="py-32 mb-16" id="how-it-works">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
             <span class="inline-block bg-gray-100 text-gray-900 text-sm px-4 py-1 !rounded-sm mb-6">How to Use</span>
@@ -195,7 +195,7 @@ behavior: 'smooth'
 </div>
 
 <!-- Key Features Section -->
-<section class="py-32 bg-white">
+<section class="py-32 bg-white" id="features">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-24">
             <span class="inline-block bg-gray-100 text-gray-900 text-sm px-4 py-1 !rounded-sm mb-6">Key Features</span>
