--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@ behavior: 'smooth'
 </div>
 </div>
 </section>
+<!-- Embedded YouTube Video -->
+<div class="flex justify-center mt-20 mb-12">
+  <div class="w-full max-w-3xl aspect-w-16 aspect-h-9">
+    <iframe class="w-full h-80 md:h-[420px] rounded-2xl shadow-lg" src="https://www.youtube.com/embed/VVkDXeqiCbA?si=tmjcf7J_WDp6gc0S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+</div>
+<!-- End Embedded YouTube Video -->
 <div class="mt-32 mb-32">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-12">
